Alternative au zoom en évitant de rédessiner plusieurs fois la fractal en cas de zoom précipité

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 		<script type="text/javascript" src="display.js"></script>
 		<script type="text/javascript" src="input.js"></script>
 		<script type="text/javascript" src="config.js"></script>
+		<script type="text/javascript" src="fractal.js" defer="defer"></script>
 	</head>
 	
 	<body>
 		<canvas id="canvas"></canvas>
-		<script type="text/javascript" src="fractal.js" refer="refer"></script>
 	</body>
 </html>
